--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -5,5 +7,6 @@
 }
 
 body {
-  font-family: sans-serif;
+  background-color: #f8f8f8;
+  font-family: "Roboto", sans-serif;
 }
