--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -19,14 +19,14 @@
   margin-top: 22px;
 }
 
-.detail h1 {
+.detail > h1 {
   color: #262626;
   font-weight: 700;
   font-size: 32px;
   letter-spacing: 0.5px;
 }
 
-.detail p {
+.detail > p {
   color: #9d9d9d;
   font-weight: 500;
   font-size: 24px;
@@ -35,13 +35,71 @@
   margin: 18px 0 34px;
 }
 
-.detail button {
+.button {
   padding: 10px 24px 10px 26px;
   font-size: 16px;
   letter-spacing: 0.9px;
 }
 
-.detail button span {
+.button span {
   font-size: 18px;
   padding-left: 3px;
+}
+
+.auth {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  row-gap: 24px;
+}
+
+.auth p {
+  color: #bfbfbf;
+  font-size: 13px;
+  letter-spacing: 1.5px;
+}
+
+.join {
+  border-radius: 12px;
+  border: 1px solid #ebebeb;
+  background-color: #f9f9f9;
+  padding: 11px 24px;
+}
+
+.join input,
+.join button {
+  background-color: transparent;
+  border: none;
+  font-family: "Roboto", sans-serif;
+  font-size: 15px;
+  outline: none;
+}
+
+.join input {
+  color: #4d4d4d;
+  padding-right: 8px;
+  width: 220px;
+}
+
+.join input::placeholder {
+  color: #c6c6c6;
+}
+
+.join button {
+  cursor: pointer;
+  color: #4ba9ff;
+  font-weight: 500;
+  padding: 2px 4px;
+}
+
+.join button:hover {
+  opacity: 0.7;
+}
+
+.join button:active {
+  opacity: 0.5;
+}
+
+.image {
+  width: 60% !important;
 }
