--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -52,3 +52,12 @@ main {
 .button:active {
   opacity: 0.7;
 }
+
+.button:disabled {
+  background: rgba(0, 0, 0, 0.2) !important;
+  cursor: default;
+}
+
+.button:disabled:hover {
+  opacity: 1;
+}
