--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -17,3 +17,62 @@
   height: 48px;
   margin-bottom: -2px;
 }
+
+.logged_user {
+  position: relative;
+}
+
+.user {
+  align-items: center;
+  border-radius: 16px;
+  border-top-right-radius: 28px;
+  border-bottom-right-radius: 28px;
+  column-gap: 8px;
+  display: flex;
+  padding: 10px 48px 10px 18px;
+  position: relative;
+}
+
+.user img {
+  border: 1px solid rgba(209, 73, 229, 0.9);
+  height: 37px;
+  border-radius: 50%;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.popup {
+  border-radius: 8px;
+  border: 2px solid #eee;
+  background-color: white;
+  padding: 12px 20px;
+  min-width: 150px;
+  max-width: 220px;
+  position: absolute;
+  right: 10px;
+  top: 100%;
+  opacity: 0;
+  display: none;
+  transition: all 0.25s ease-in-out;
+  z-index: 25;
+}
+
+.popup p {
+  color: rgb(183, 183, 183);
+  font-size: 14px;
+}
+
+.popup button {
+  background: #d9d9d9;
+  margin-top: 16px;
+  width: 100%;
+}
+
+.popup button:hover {
+  background: #dddddd;
+}
+
+.popup button:active {
+  background: #e5e5e5;
+}
