--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -61,3 +61,9 @@ main {
 .button:disabled:hover {
   opacity: 1;
 }
+
+@media only screen and (max-width: 460px) {
+  .button {
+    padding: 8px 22px;
+  }
+}
