--- a/src/styles/Question.module.css
+++ b/src/styles/Question.module.css
@@ -56,7 +56,7 @@
   font-size: 15px;
   row-gap: 14px;
   padding: 16px 22px;
-  max-height: 148px;
+  max-height: 158px;
   overflow-y: scroll;
 }
 
@@ -97,4 +97,92 @@
   outline: none;
   padding: 0 14px;
   width: 100%;
+}
+
+@media only screen and (max-width: 680px) {
+  .question {
+    margin: 30px 14px;
+  }
+
+  .question > div > img {
+    width: 40px;
+  }
+
+  .detail {
+    font-size: 16px;
+    padding: 16px;
+    padding-left: 32px;
+  }
+
+  .votes {
+    font-size: 12px;
+    row-gap: 1px;
+  }
+
+  .votes svg {
+    width: 24px;
+  }
+
+  .answers {
+    padding: 14px 18px;
+    max-height: 106px;
+  }
+
+  .ans {
+    align-items: center;
+    column-gap: 10px;
+  }
+
+  .ans img {
+    height: 30px;
+    width: 30px;
+  }
+
+  .ans p {
+    font-size: 13px;
+  }
+
+  .ans_input input,
+  .ans_input button {
+    font-size: 13px;
+  }
+}
+
+@media only screen and (max-width: 460px) {
+  .question {
+    margin: 20px 8px 28px 14px;
+  }
+
+  .question > div > img {
+    width: 37px;
+    left: -18px;
+    top: 9px;
+  }
+
+  .detail {
+    padding: 15px;
+    padding-left: 30px;
+  }
+
+  .votes {
+    font-size: 11px;
+  }
+
+  .votes svg {
+    width: 22px;
+  }
+
+  .answers {
+    padding: 12px 16px;
+    max-height: 102px;
+  }
+
+  .ans img {
+    height: 28px;
+    width: 28px;
+  }
+
+  .ans p {
+    letter-spacing: 0;
+  }
 }
