--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -1,14 +1,14 @@
 .footer {
   align-items: center;
   background-color: white;
-  border-top-left-radius: 12px;
-  border-top-right-radius: 12px;
+  border-radius: 12px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
   display: flex;
   height: 108px;
   justify-content: space-between;
   padding: 0 40px;
   margin: auto;
+  margin-bottom: 24px;
   max-width: 880px;
   width: 90vw;
 }
@@ -18,7 +18,7 @@
 }
 
 .footer div {
-  margin-bottom: -14px;
+  margin-bottom: -6px;
 }
 
 .social {
